[package]
name = "prismswap_asset_price"
version = "0.1.0"
authors = ["Nebula Protocol <engineering@neb.money>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
owasm-kit = { version = "0.1.13" }
obi = { version = "0.0.2" }
strum = { version = "0.23.0" }
strum_macros = { version = "0.23.1" }